# park_bot

./: .dockerignore  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  steer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: commands.yaml  fws_controller.yaml  joystick.yaml  main.rviz  my_controller.yaml  my_controllers.yaml  nav.yaml  slam.yaml  view_bot.rviz
description/: ackermann.xacro  camera.xacro  gz_control.xacro  lidar.xacro  materials.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  robot_macros.xacro  ros2_control.xacro
docs/: kinematic_fixtures.md  kinematics.md
frames/: frames_2023-09-14_20.28.24.gv  frames_2023-09-15_14.48.42.gv  frames_2023-09-15_17.26.03.gv  frames_2023-09-15_18.08.30.gv  frames_2023-09-15_18.30.44.gv  frames_2023-09-15_18.52.00.gv  frames_2023-09-16_09.28.42.gv  frames_2023-09-16_09.32.40.gv  frames_2023-09-16_09.40.38.gv  frames_2023-09-16_09.50.12.gv  frames_2023-09-16_13.46.01.gv  frames_2023-09-16_13.47.06.gv  frames_2023-09-18_14.22.19.gv  frames_2023-09-18_14.23.10.gv  frames_2023-09-18_14.26.05.gv
launch/: ackermann.launch.py  control.launch.py  gz.launch.py  gz_ros2_control.launch.py  joystick.launch.py  robot.launch.py  rplidar.launch.py  rsp.launch.py  rsp_sim.launch.py  sim.launch.py
park_bot/: kinematics.py
scripts/: build.bat  build.sh  run_sim.bat  run_sim.sh
src/: publish_commands.py
test/: test_kinematics.py
worlds/: first_world.world  park.sdf  park.world  parkingLot.sdf  world_park.world
