<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>park_bot</name>
  <version>0.0.0</version>
  <description>Mechatronic Project 488 Autonomous Parking of a 4WS Vehicle</description>
  <maintainer email="nishalan.govender@gmail.com">Nishalan Govender</maintainer>
  <license>No official license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>fws_publisher</build_depend>
  <exec_depend>fws_publisher</exec_depend>
  <build_depend>fws_controller</build_depend>
  <exec_depend>fws_controller</exec_depend>
  <build_depend>rf2o_laser_odometry</build_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
